crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__custom_function_variant_with_args.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
::css_parse::keyword_set!(FooKeywords { FitContent : "fit-content", });
#[derive(
    ::csskit_derives::IntoSpan,
    ::csskit_derives::ToCursors,
    Debug,
    Clone,
    PartialEq,
    Eq,
    PartialOrd,
    Ord,
    Hash
)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
enum Foo {
    FitContent(::css_parse::T![Ident]),
    FitContentFunction(
        ::css_parse::T![Function],
        crate::LengthPercentage,
        Option<::css_parse::T![')']>,
    ),
}
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for Foo {
    fn peek(p: &::css_parse::Parser<'a>, c: ::css_lexer::Cursor) -> bool {
        use ::css_parse::Peek;
        <::css_parse::T![Ident]>::peek(p, c) || <::css_parse::T![Function]>::peek(p, c)
    }
}
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Foo {
    fn parse(p: &mut ::css_parse::Parser<'a>) -> ::css_parse::Result<Self> {
        use ::css_parse::{Parse, Peek};
        if let Some(keyword) = p.parse_if_peek::<FooKeywords>()? {
            use ::css_parse::Build;
            match keyword {
                FooKeywords::FitContent(c) => {
                    return Ok(Self::FitContent(<::css_parse::T![Ident]>::build(p, c)));
                }
            }
        }
        let function = p.parse::<::css_parse::T![Function]>()?;
        let c: css_lexer::Cursor = function.into();
        if !p.eq_ignore_ascii_case(c, "fit-content") {
            return Err(
                ::css_parse::diagnostics::UnexpectedFunction(
                    p.parse_str(c).into(),
                    c.into(),
                ),
            )?;
        }
        let start = p.offset();
        let ty = p.parse::<crate::LengthPercentage>()?;
        let valf32: f32 = ty.into();
        if 0f32 > valf32 {
            return Err(
                ::css_parse::diagnostics::NumberTooSmall(
                    0f32,
                    ::css_lexer::Span::new(start, p.offset()),
                ),
            )?;
        }
        let inner = ty;
        let close = p.parse_if_peek::<::css_parse::T![')']>()?;
        Ok(Self::FitContentFunction(function, inner, close))
    }
}
