crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__custom_function_variant_with_multiplier_args.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
::css_parse::keyword_set!(pub enum FooKeywords { Normal : "normal", });
#[derive(
    ::csskit_derives::ToSpan,
    ::csskit_derives::ToCursors,
    Debug,
    Clone,
    PartialEq,
    Eq,
    PartialOrd,
    Ord,
    Hash
)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
enum Foo<'a> {
    Normal(::css_parse::T![Ident]),
    StylesetFunction(
        ::css_parse::T![Function],
        ::css_parse::CommaSeparated<'a, crate::FeatureValueName>,
        Option<::css_parse::T![')']>,
    ),
}
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for Foo<'a> {
    fn peek(p: &::css_parse::Parser<'a>, c: ::css_lexer::Cursor) -> bool {
        use ::css_parse::Peek;
        <::css_parse::T![Ident]>::peek(p, c) || <::css_parse::T![Function]>::peek(p, c)
    }
}
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Foo<'a> {
    fn parse(p: &mut ::css_parse::Parser<'a>) -> ::css_parse::Result<Self> {
        use ::css_parse::{Parse, Peek};
        match p.parse_if_peek::<FooKeywords>()? {
            Some(FooKeywords::Normal(ident)) => {
                return Ok(Self::Normal(ident));
            }
            None => {}
        }
        let function = p.parse::<::css_parse::T![Function]>()?;
        let c: css_lexer::Cursor = function.into();
        if !p.eq_ignore_ascii_case(c, "styleset") {
            return Err(
                ::css_parse::diagnostics::UnexpectedFunction(
                    p.parse_str(c).into(),
                    c.into(),
                ),
            )?;
        }
        let inner = p
            .parse::<::css_parse::CommaSeparated<'a, crate::FeatureValueName>>()?;
        let close = p.parse_if_peek::<::css_parse::T![')']>()?;
        Ok(Self::StylesetFunction(function, inner, close))
    }
}
